--- a/public/index.html
+++ b/public/index.html
@@ -15,17 +15,17 @@
 <meta name="robots" content="all,follow">
 <meta name="googlebot" content="index,follow,snippet,archive">
 
-<link rel="stylesheet" href="/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://noni-und-joni.netlify.com/css/bootstrap.min.css">
 <link rel="stylesheet" id="ct-tracks-google-fonts-css" href="//fonts.googleapis.com/css?family=Raleway%3A400%2C700&amp;subset=latin%2Clatin-ext&amp;ver=4.7.2" type="text/css" media="all">
-<link rel="stylesheet" href="/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://noni-und-joni.netlify.com/css/font-awesome.min.css">
 
-<link href="/css/style.default.css" rel="stylesheet" id="theme-stylesheet">
+<link href="https://noni-und-joni.netlify.com/css/style.default.css" rel="stylesheet" id="theme-stylesheet">
 
-<link href="/css/custom.css" rel="stylesheet">
-<link rel="shortcut icon" href="/img/favicon.png">
+<link href="https://noni-und-joni.netlify.com/css/custom.css" rel="stylesheet">
+<link rel="shortcut icon" href="https://noni-und-joni.netlify.com/img/favicon.png">
 
-<link href="/index.xml" rel="alternate" type="application/rss+xml" title="Noni &amp; Joni" />
-<link href="/index.xml" rel="feed" type="application/rss+xml" title="Noni &amp; Joni" />
+<link href="https://noni-und-joni.netlify.com/index.xml" rel="alternate" type="application/rss+xml" title="Noni &amp; Joni" />
+<link href="https://noni-und-joni.netlify.com/index.xml" rel="feed" type="application/rss+xml" title="Noni &amp; Joni" />
 
 
 </head>
@@ -143,12 +143,12 @@
           November 05
         </div>
         <div class="row content-title">
-          <h2> <a href="/post/work2/ "> This is a Standard Post </a> </h2>
+          <h2> <a href="https://noni-und-joni.netlify.com/post/work2/ "> This is a Standard Post </a> </h2>
         </div>
         <div class="row content-summary">
           <p>This is what an ordinary post looks like, and you’re reading a custom excerpt right now. Have fun looking around the theme, and don’t forget to check it out on your phone!
 </p>
-          <a class="more-link" href="/post/work2/ ">Read the post</a>
+          <a class="more-link" href="https://noni-und-joni.netlify.com/post/work2/ ">Read the post</a>
         </div>
       </div>
     </div>
@@ -167,13 +167,13 @@
           October 05
         </div>
         <div class="row content-title">
-          <h2> <a href="/post/2017-10-09-new-york/ "> New York </a> </h2>
+          <h2> <a href="https://noni-und-joni.netlify.com/post/2017-10-09-new-york/ "> New York </a> </h2>
         </div>
         <div class="row content-summary">
           <p>Dein erstes Mal in New York</p>
 
 <p></p>
-          <a class="more-link" href="/post/2017-10-09-new-york/ ">Read the post</a>
+          <a class="more-link" href="https://noni-und-joni.netlify.com/post/2017-10-09-new-york/ ">Read the post</a>
         </div>
       </div>
     </div>
@@ -250,15 +250,15 @@
         </div>
       </div>
     </div>
-    <script src="/js/jquery.min.js"></script>
-<script src="/js/bootstrap.min.js"></script>
-<script src="/js/jquery.cookie.js"> </script>
-<script src="/js/ekko-lightbox.js"></script>
-<script src="/js/jquery.scrollTo.min.js"></script>
-<script src="/js/masonry.pkgd.min.js"></script>
-<script src="/js/imagesloaded.pkgd.min.js"></script>
-<script src="/js/owl.carousel.min.js"></script>
-<script src="/js/front.js"></script>
+    <script src="https://noni-und-joni.netlify.com/js/jquery.min.js"></script>
+<script src="https://noni-und-joni.netlify.com/js/bootstrap.min.js"></script>
+<script src="https://noni-und-joni.netlify.com/js/jquery.cookie.js"> </script>
+<script src="https://noni-und-joni.netlify.com/js/ekko-lightbox.js"></script>
+<script src="https://noni-und-joni.netlify.com/js/jquery.scrollTo.min.js"></script>
+<script src="https://noni-und-joni.netlify.com/js/masonry.pkgd.min.js"></script>
+<script src="https://noni-und-joni.netlify.com/js/imagesloaded.pkgd.min.js"></script>
+<script src="https://noni-und-joni.netlify.com/js/owl.carousel.min.js"></script>
+<script src="https://noni-und-joni.netlify.com/js/front.js"></script>
 
   </body>
 </html>
