--- a/public/index.html
+++ b/public/index.html
@@ -133,22 +133,23 @@
 
 <div class="row content">
   
-  <div class="col-sm-6 content-image" style="background-image: url(img/portfolio/logs1.jpg)">
+  <div class="col-sm-6 content-image" style="background-image: url(img/portfolio/Pitt.jpg)">
   </div>
   <div class="col-sm-6 content-excerpt">
   
     <div class="row">
       <div class="col-md-12">
         <div class="row content-date">
-          November 05
+          August 31
         </div>
         <div class="row content-title">
-          <h2> <a href="https://noni-und-joni.netlify.com/post/work2/ "> This is a Standard Post </a> </h2>
+          <h2> <a href="https://noni-und-joni.netlify.com/post/2017-11-07-pittsburgh/ "> Pittsburgh </a> </h2>
         </div>
         <div class="row content-summary">
-          <p>This is what an ordinary post looks like, and you’re reading a custom excerpt right now. Have fun looking around the theme, and don’t forget to check it out on your phone!
-</p>
-          <a class="more-link" href="https://noni-und-joni.netlify.com/post/work2/ ">Read the post</a>
+          <p>One night in Pittsburgh</p>
+
+<p></p>
+          <a class="more-link" href="https://noni-und-joni.netlify.com/post/2017-11-07-pittsburgh/ ">Read the post</a>
         </div>
       </div>
     </div>
@@ -157,48 +158,23 @@
 
 <div class="row content">
   
-  <div class="col-sm-6 content-image" style="background-image: url(img/portfolio/Flug.jpg)">
+  <div class="col-sm-6 content-image" style="background-image: url(img/portfolio/Niagara.jpg)">
   </div>
   <div class="col-sm-6 content-excerpt">
   
     <div class="row">
       <div class="col-md-12">
         <div class="row content-date">
-          October 05
+          August 30
         </div>
         <div class="row content-title">
-          <h2> <a href="https://noni-und-joni.netlify.com/post/2017-10-16-1-flug/ "> 1. Flug </a> </h2>
+          <h2> <a href="https://noni-und-joni.netlify.com/post/2017-11-07-niagara-falls/ "> Niagara Falls </a> </h2>
         </div>
         <div class="row content-summary">
-          <p>Dein erster Flug in einem grooooßen Flugzeug!!!</p>
+          <p>First time in Kanada!</p>
 
 <p></p>
-          <a class="more-link" href="https://noni-und-joni.netlify.com/post/2017-10-16-1-flug/ ">Read the post</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="row content">
-  
-  <div class="col-sm-6 content-image" style="background-image: url(img/portfolio/Beach.jpg)">
-  </div>
-  <div class="col-sm-6 content-excerpt">
-  
-    <div class="row">
-      <div class="col-md-12">
-        <div class="row content-date">
-          October 05
-        </div>
-        <div class="row content-title">
-          <h2> <a href="https://noni-und-joni.netlify.com/post/2017-10-16-erie-metropolitan-area/ "> Erie </a> </h2>
-        </div>
-        <div class="row content-summary">
-          <p>The Big City Life</p>
-
-<p></p>
-          <a class="more-link" href="https://noni-und-joni.netlify.com/post/2017-10-16-erie-metropolitan-area/ ">Read the post</a>
+          <a class="more-link" href="https://noni-und-joni.netlify.com/post/2017-11-07-niagara-falls/ ">Read the post</a>
         </div>
       </div>
     </div>
@@ -214,7 +190,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="row content-date">
-          October 05
+          August 29
         </div>
         <div class="row content-title">
           <h2> <a href="https://noni-und-joni.netlify.com/post/2017-11-06-findley-lake/ "> Findley Lake </a> </h2>
@@ -232,6 +208,31 @@
 
 <div class="row content">
   
+  <div class="col-sm-6 content-image" style="background-image: url(img/portfolio/Beach.jpg)">
+  </div>
+  <div class="col-sm-6 content-excerpt">
+  
+    <div class="row">
+      <div class="col-md-12">
+        <div class="row content-date">
+          August 23
+        </div>
+        <div class="row content-title">
+          <h2> <a href="https://noni-und-joni.netlify.com/post/2017-10-16-erie-metropolitan-area/ "> Erie </a> </h2>
+        </div>
+        <div class="row content-summary">
+          <p>The Big City Life</p>
+
+<p></p>
+          <a class="more-link" href="https://noni-und-joni.netlify.com/post/2017-10-16-erie-metropolitan-area/ ">Read the post</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row content">
+  
   <div class="col-sm-6 content-image" style="background-image: url(img/portfolio/MU.jpg)">
   </div>
   <div class="col-sm-6 content-excerpt">
@@ -239,7 +240,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="row content-date">
-          October 05
+          August 21
         </div>
         <div class="row content-title">
           <h2> <a href="https://noni-und-joni.netlify.com/post/2017-10-16-mercyhurst/ "> Mercyhurst </a> </h2>
@@ -257,6 +258,31 @@
 
 <div class="row content">
   
+  <div class="col-sm-6 content-image" style="background-image: url(img/portfolio/nyc.jpg)">
+  </div>
+  <div class="col-sm-6 content-excerpt">
+  
+    <div class="row">
+      <div class="col-md-12">
+        <div class="row content-date">
+          August 18
+        </div>
+        <div class="row content-title">
+          <h2> <a href="https://noni-und-joni.netlify.com/post/2017-10-09-new-york/ "> New York </a> </h2>
+        </div>
+        <div class="row content-summary">
+          <p>Dein erstes Mal in New York</p>
+
+<p></p>
+          <a class="more-link" href="https://noni-und-joni.netlify.com/post/2017-10-09-new-york/ ">Read the post</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row content">
+  
   <div class="col-sm-6 content-image" style="background-image: url(img/portfolio/NR.jpg)">
   </div>
   <div class="col-sm-6 content-excerpt">
@@ -264,7 +290,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="row content-date">
-          October 05
+          August 17
         </div>
         <div class="row content-title">
           <h2> <a href="https://noni-und-joni.netlify.com/post/2017-10-16-new-rochelle/ "> New Rochelle </a> </h2>
@@ -282,23 +308,23 @@
 
 <div class="row content">
   
-  <div class="col-sm-6 content-image" style="background-image: url(img/portfolio/nyc.jpg)">
+  <div class="col-sm-6 content-image" style="background-image: url(img/portfolio/Flug.jpg)">
   </div>
   <div class="col-sm-6 content-excerpt">
   
     <div class="row">
       <div class="col-md-12">
         <div class="row content-date">
-          October 05
+          August 16
         </div>
         <div class="row content-title">
-          <h2> <a href="https://noni-und-joni.netlify.com/post/2017-10-09-new-york/ "> New York </a> </h2>
+          <h2> <a href="https://noni-und-joni.netlify.com/post/2017-10-16-1-flug/ "> 1. Flug </a> </h2>
         </div>
         <div class="row content-summary">
-          <p>Dein erstes Mal in New York</p>
+          <p>Dein erster Flug in einem grooooßen Flugzeug!!!</p>
 
 <p></p>
-          <a class="more-link" href="https://noni-und-joni.netlify.com/post/2017-10-09-new-york/ ">Read the post</a>
+          <a class="more-link" href="https://noni-und-joni.netlify.com/post/2017-10-16-1-flug/ ">Read the post</a>
         </div>
       </div>
     </div>
