--- a/public/index.html
+++ b/public/index.html
@@ -15,17 +15,17 @@
 <meta name="robots" content="all,follow">
 <meta name="googlebot" content="index,follow,snippet,archive">
 
-<link rel="stylesheet" href="https://noni-und-joni.netlify.com/css/bootstrap.min.css">
+<link rel="stylesheet" href="/css/bootstrap.min.css">
 <link rel="stylesheet" id="ct-tracks-google-fonts-css" href="//fonts.googleapis.com/css?family=Raleway%3A400%2C700&amp;subset=latin%2Clatin-ext&amp;ver=4.7.2" type="text/css" media="all">
-<link rel="stylesheet" href="https://noni-und-joni.netlify.com/css/font-awesome.min.css">
+<link rel="stylesheet" href="/css/font-awesome.min.css">
 
-<link href="https://noni-und-joni.netlify.com/css/style.default.css" rel="stylesheet" id="theme-stylesheet">
+<link href="/css/style.default.css" rel="stylesheet" id="theme-stylesheet">
 
-<link href="https://noni-und-joni.netlify.com/css/custom.css" rel="stylesheet">
-<link rel="shortcut icon" href="https://noni-und-joni.netlify.com/img/favicon.png">
+<link href="/css/custom.css" rel="stylesheet">
+<link rel="shortcut icon" href="/img/favicon.png">
 
-<link href="https://noni-und-joni.netlify.com/index.xml" rel="alternate" type="application/rss+xml" title="Noni &amp; Joni" />
-<link href="https://noni-und-joni.netlify.com/index.xml" rel="feed" type="application/rss+xml" title="Noni &amp; Joni" />
+<link href="/index.xml" rel="alternate" type="application/rss+xml" title="Noni &amp; Joni" />
+<link href="/index.xml" rel="feed" type="application/rss+xml" title="Noni &amp; Joni" />
 
 
 </head>
@@ -133,6 +133,82 @@
 
 <div class="row content">
   
+  <div class="col-sm-6 content-image" style="background-image: url(img/portfolio/CF.jpg)">
+  </div>
+  <div class="col-sm-6 content-excerpt">
+  
+    <div class="row">
+      <div class="col-md-12">
+        <div class="row content-date">
+          December 07
+        </div>
+        <div class="row content-title">
+          <h2> <a href="/post/2017-11-21-happy-birthday/ "> Happy Birthday! </a> </h2>
+        </div>
+        <div class="row content-summary">
+          <p>Mein Geschenk für dich :) Ich hoffe es gefällt dir! Click for more.</p>
+
+<p></p>
+          <a class="more-link" href="/post/2017-11-21-happy-birthday/ ">Read the post</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row content">
+  
+  <div class="col-sm-6 content-image" style="background-image: url(img/portfolio/CF.jpg)">
+  </div>
+  <div class="col-sm-6 content-excerpt">
+  
+    <div class="row">
+      <div class="col-md-12">
+        <div class="row content-date">
+          September 02
+        </div>
+        <div class="row content-title">
+          <h2> <a href="/post/2017-11-21-chicago/ "> Chicago </a> </h2>
+        </div>
+        <div class="row content-summary">
+          <p>Das beste kam zum Schluss unser gemeinsamen Amerikareise :)
+Aber leider auch der schmerzhafte Abschied&hellip; -.-</p>
+
+<p></p>
+          <a class="more-link" href="/post/2017-11-21-chicago/ ">Read the post</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row content">
+  
+  <div class="col-sm-6 content-image" style="background-image: url(img/portfolio/CLE.jpg)">
+  </div>
+  <div class="col-sm-6 content-excerpt">
+  
+    <div class="row">
+      <div class="col-md-12">
+        <div class="row content-date">
+          September 01
+        </div>
+        <div class="row content-title">
+          <h2> <a href="/post/2017-11-21-cleveland/ "> Cleveland </a> </h2>
+        </div>
+        <div class="row content-summary">
+          <p>Kurz &amp; knackig - so wie du hehe hihi</p>
+
+<p></p>
+          <a class="more-link" href="/post/2017-11-21-cleveland/ ">Read the post</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row content">
+  
   <div class="col-sm-6 content-image" style="background-image: url(img/portfolio/Pitt.jpg)">
   </div>
   <div class="col-sm-6 content-excerpt">
@@ -143,13 +219,13 @@
           August 31
         </div>
         <div class="row content-title">
-          <h2> <a href="https://noni-und-joni.netlify.com/post/2017-11-07-pittsburgh/ "> Pittsburgh </a> </h2>
+          <h2> <a href="/post/2017-11-07-pittsburgh/ "> Pittsburgh </a> </h2>
         </div>
         <div class="row content-summary">
           <p>One night in Pittsburgh</p>
 
 <p></p>
-          <a class="more-link" href="https://noni-und-joni.netlify.com/post/2017-11-07-pittsburgh/ ">Read the post</a>
+          <a class="more-link" href="/post/2017-11-07-pittsburgh/ ">Read the post</a>
         </div>
       </div>
     </div>
@@ -168,13 +244,13 @@
           August 30
         </div>
         <div class="row content-title">
-          <h2> <a href="https://noni-und-joni.netlify.com/post/2017-11-07-niagara-falls/ "> Niagara Falls </a> </h2>
+          <h2> <a href="/post/2017-11-07-niagara-falls/ "> Niagara Falls </a> </h2>
         </div>
         <div class="row content-summary">
           <p>First time in Kanada!</p>
 
 <p></p>
-          <a class="more-link" href="https://noni-und-joni.netlify.com/post/2017-11-07-niagara-falls/ ">Read the post</a>
+          <a class="more-link" href="/post/2017-11-07-niagara-falls/ ">Read the post</a>
         </div>
       </div>
     </div>
@@ -193,13 +269,13 @@
           August 29
         </div>
         <div class="row content-title">
-          <h2> <a href="https://noni-und-joni.netlify.com/post/2017-11-06-findley-lake/ "> Findley Lake </a> </h2>
+          <h2> <a href="/post/2017-11-06-findley-lake/ "> Findley Lake </a> </h2>
         </div>
         <div class="row content-summary">
           <p>Ob du behindert bist, habe ich gefragt! hihihi</p>
 
 <p></p>
-          <a class="more-link" href="https://noni-und-joni.netlify.com/post/2017-11-06-findley-lake/ ">Read the post</a>
+          <a class="more-link" href="/post/2017-11-06-findley-lake/ ">Read the post</a>
         </div>
       </div>
     </div>
@@ -218,13 +294,13 @@
           August 23
         </div>
         <div class="row content-title">
-          <h2> <a href="https://noni-und-joni.netlify.com/post/2017-10-16-erie-metropolitan-area/ "> Erie </a> </h2>
+          <h2> <a href="/post/2017-10-16-erie-metropolitan-area/ "> Erie </a> </h2>
         </div>
         <div class="row content-summary">
           <p>The Big City Life</p>
 
 <p></p>
-          <a class="more-link" href="https://noni-und-joni.netlify.com/post/2017-10-16-erie-metropolitan-area/ ">Read the post</a>
+          <a class="more-link" href="/post/2017-10-16-erie-metropolitan-area/ ">Read the post</a>
         </div>
       </div>
     </div>
@@ -243,13 +319,13 @@
           August 21
         </div>
         <div class="row content-title">
-          <h2> <a href="https://noni-und-joni.netlify.com/post/2017-10-16-mercyhurst/ "> Mercyhurst </a> </h2>
+          <h2> <a href="/post/2017-10-16-mercyhurst/ "> Mercyhurst </a> </h2>
         </div>
         <div class="row content-summary">
           <p>Zu Besuch in der besten Uni der Welt</p>
 
 <p></p>
-          <a class="more-link" href="https://noni-und-joni.netlify.com/post/2017-10-16-mercyhurst/ ">Read the post</a>
+          <a class="more-link" href="/post/2017-10-16-mercyhurst/ ">Read the post</a>
         </div>
       </div>
     </div>
@@ -268,13 +344,13 @@
           August 18
         </div>
         <div class="row content-title">
-          <h2> <a href="https://noni-und-joni.netlify.com/post/2017-10-09-new-york/ "> New York </a> </h2>
+          <h2> <a href="/post/2017-10-09-new-york/ "> New York </a> </h2>
         </div>
         <div class="row content-summary">
           <p>Dein erstes Mal in New York</p>
 
 <p></p>
-          <a class="more-link" href="https://noni-und-joni.netlify.com/post/2017-10-09-new-york/ ">Read the post</a>
+          <a class="more-link" href="/post/2017-10-09-new-york/ ">Read the post</a>
         </div>
       </div>
     </div>
@@ -293,13 +369,13 @@
           August 17
         </div>
         <div class="row content-title">
-          <h2> <a href="https://noni-und-joni.netlify.com/post/2017-10-16-new-rochelle/ "> New Rochelle </a> </h2>
+          <h2> <a href="/post/2017-10-16-new-rochelle/ "> New Rochelle </a> </h2>
         </div>
         <div class="row content-summary">
           <p>Unsere Unterkunft bei Pat</p>
 
 <p></p>
-          <a class="more-link" href="https://noni-und-joni.netlify.com/post/2017-10-16-new-rochelle/ ">Read the post</a>
+          <a class="more-link" href="/post/2017-10-16-new-rochelle/ ">Read the post</a>
         </div>
       </div>
     </div>
@@ -318,13 +394,13 @@
           August 16
         </div>
         <div class="row content-title">
-          <h2> <a href="https://noni-und-joni.netlify.com/post/2017-10-16-1-flug/ "> 1. Flug </a> </h2>
+          <h2> <a href="/post/2017-10-16-1-flug/ "> 1. Flug </a> </h2>
         </div>
         <div class="row content-summary">
           <p>Dein erster Flug in einem grooooßen Flugzeug!!!</p>
 
 <p></p>
-          <a class="more-link" href="https://noni-und-joni.netlify.com/post/2017-10-16-1-flug/ ">Read the post</a>
+          <a class="more-link" href="/post/2017-10-16-1-flug/ ">Read the post</a>
         </div>
       </div>
     </div>
@@ -401,15 +477,15 @@
         </div>
       </div>
     </div>
-    <script src="https://noni-und-joni.netlify.com/js/jquery.min.js"></script>
-<script src="https://noni-und-joni.netlify.com/js/bootstrap.min.js"></script>
-<script src="https://noni-und-joni.netlify.com/js/jquery.cookie.js"> </script>
-<script src="https://noni-und-joni.netlify.com/js/ekko-lightbox.js"></script>
-<script src="https://noni-und-joni.netlify.com/js/jquery.scrollTo.min.js"></script>
-<script src="https://noni-und-joni.netlify.com/js/masonry.pkgd.min.js"></script>
-<script src="https://noni-und-joni.netlify.com/js/imagesloaded.pkgd.min.js"></script>
-<script src="https://noni-und-joni.netlify.com/js/owl.carousel.min.js"></script>
-<script src="https://noni-und-joni.netlify.com/js/front.js"></script>
+    <script src="/js/jquery.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/jquery.cookie.js"> </script>
+<script src="/js/ekko-lightbox.js"></script>
+<script src="/js/jquery.scrollTo.min.js"></script>
+<script src="/js/masonry.pkgd.min.js"></script>
+<script src="/js/imagesloaded.pkgd.min.js"></script>
+<script src="/js/owl.carousel.min.js"></script>
+<script src="/js/front.js"></script>
 
   </body>
 </html>
