--- a/public/index.html
+++ b/public/index.html
@@ -133,7 +133,7 @@
 
 <div class="row content">
   
-  <div class="col-sm-6 content-image" style="background-image: url(img/portfolio/CF.jpg)">
+  <div class="col-sm-6 content-image" style="background-image: url(img/portfolio/hbd.jpg)">
   </div>
   <div class="col-sm-6 content-excerpt">
   
